# serializer version: 1
# name: test_get_all_session_environments
  list([
    dict({
      'container_image': 'some_image:some_tag',
      'default_url': '/lab',
      'description': 'A session environment.',
      'gid': 1000,
      'is_archived': False,
      'name': 'Environment 1',
      'port': 8080,
      'strip_path_prefix': False,
      'uid': 1000,
    }),
    dict({
      'container_image': 'some_image:some_tag',
      'default_url': '/lab',
      'description': 'A session environment.',
      'gid': 1000,
      'is_archived': False,
      'name': 'Environment 2',
      'port': 8080,
      'strip_path_prefix': False,
      'uid': 1000,
    }),
    dict({
      'container_image': 'some_image:some_tag',
      'default_url': '/lab',
      'description': 'A session environment.',
      'gid': 1000,
      'is_archived': False,
      'name': 'Environment 3',
      'port': 8080,
      'strip_path_prefix': False,
      'uid': 1000,
    }),
    dict({
      'container_image': 'some_image:some_tag',
      'default_url': '/lab',
      'description': 'A session environment.',
      'gid': 1000,
      'is_archived': True,
      'name': 'Environment 4',
      'port': 8080,
      'strip_path_prefix': False,
      'uid': 1000,
    }),
  ])
# ---
# name: test_get_all_session_launchers
  list([
    dict({
      'description': 'A session launcher.',
      'environment': dict({
        'container_image': 'some_image:some_tag',
        'default_url': '/lab',
        'environment_image_source': 'image',
        'environment_kind': 'CUSTOM',
        'gid': 1000,
        'is_archived': False,
        'name': 'Test',
        'port': 8080,
        'strip_path_prefix': False,
        'uid': 1000,
      }),
      'name': 'Launcher 1',
    }),
    dict({
      'description': 'A session launcher.',
      'environment': dict({
        'container_image': 'some_image:some_tag',
        'default_url': '/lab',
        'environment_image_source': 'image',
        'environment_kind': 'CUSTOM',
        'gid': 1000,
        'is_archived': False,
        'name': 'Test',
        'port': 8080,
        'strip_path_prefix': False,
        'uid': 1000,
      }),
      'name': 'Launcher 2',
    }),
    dict({
      'description': 'A session launcher.',
      'environment': dict({
        'container_image': 'some_image:some_tag',
        'default_url': '/lab',
        'environment_image_source': 'image',
        'environment_kind': 'CUSTOM',
        'gid': 1000,
        'is_archived': False,
        'name': 'Test',
        'port': 8080,
        'strip_path_prefix': False,
        'uid': 1000,
      }),
      'name': 'Launcher 3',
    }),
  ])
# ---
